--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root{
+    --primaryTextColor:#000;
+    --SecondaryTextColor:#888;
+}
+
+body{
+    background-color: #ccc;
+    margin:auto;
+    width: 100%;
+}
+*{
+    margin: 0;
+    box-sizing: border-box;
+}
+@media screen and (min-width: 320px) {
+    
+}
+  
+@media screen and (min-width: 360px) {
+}
+
+@media screen and (min-width: 375px) {
+
+}
+
+@media screen and (min-width: 512px) {
+
+}
+
+@media screen and (min-width: 768px) {
+    body{
+        width: 70%;
+        margin:auto
+    }
+}
+
