--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -1,2 +1,5 @@
-<app-card-data [cardData]="cardDetail"></app-card-data>
-<app-card-general-advance [cardData]="cardDetail" [periodData]="periodDetail"></app-card-general-advance>
+<div class="challenge-likeu__container">
+    <app-card-data [cardData]="cardDetail"></app-card-data>
+    <app-card-general-advance [cardData]="cardDetail" [periodData]="periodDetail"></app-card-general-advance>
+    <app-month-challenges [periodData]="periodDetail"></app-month-challenges>
+</div>
