--- a/src/styles.css
+++ b/src/styles.css
@@ -3,22 +3,27 @@
 :root{
     --primaryTextColor:#000;
     --SecondaryTextColor:#888;
+    --primaryColor:red;
 }
 
 body{
     background-color: #ccc;
     margin:auto;
     width: 100%;
+    font-size: 12px;
 }
 *{
     margin: 0;
     box-sizing: border-box;
 }
 @media screen and (min-width: 320px) {
-    
+
 }
   
 @media screen and (min-width: 360px) {
+    body{
+        font-size: 16px;
+    }
 }
 
 @media screen and (min-width: 375px) {
