modal challenge like u

--- a/src/app/shared/components/modal-challenge-likeu/modal-challenge-likeu.component.html
+++ b/src/app/shared/components/modal-challenge-likeu/modal-challenge-likeu.component.html
@@ -1,6 +1,30 @@
-<div class="modal-challenge_container">
-    <div class="modal-challenge-header__container">
-        <h2 class="modal-challenge-header-title">Reto LikeU</h2>
-        <h2 class="modal-challenge-header-subtitle">!Santander confía en ti¡</h2>
+<div class="modal-challenges__general-container">
+    <div class="modal-challenge__container">
+        <div class="modal-challenge__header__container">
+            <h2 class="modal-challenge__header-title">Reto LikeU</h2>
+            <h2 class="modal-challenge__header-subtitle">!Santander confía en ti¡</h2>
+        </div>
+    
+        <div class="modal-challenge__goals__container">
+            <figure class="modal-challenge__goals-goal">
+                <img class="modal-challenge__goals-goal-icon" src="" alt="">
+            </figure>
+            <span class="modal-challenge__goals-goal-text">Lorem ipsum dolor sit amet.</span>
+        </div>
+    
+        <div class="modal-challenge__challenges__container">
+            <h3>Tus objetivos</h3>
+            <div class="modal-challenge__challenge__container">
+                <figure class="modal-challenge__challenge__icon">
+                    <img src="" alt="">
+                </figure>
+                <div class="modal-challenge__challenge__texts">
+                    <span class="modal-challenge__challenge__title"></span>
+                    <span class="modal-challenge__challenge__description"></span>
+                </div>
+            </div>
+        </div>
+    
+        <button class="modal-challenge__button">Entendido</button>
     </div>
 </div>
