--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -13,6 +13,7 @@
 </div>
 
 <ng-container *ngIf="switchChallengeModal">
-    <app-modal-challenges (switchModal)="switchChallengeModal=$event" ></app-modal-challenges>
+    <app-modal-challenge-likeu></app-modal-challenge-likeu>
+    <!-- <app-modal-challenges (switchModal)="switchChallengeModal=$event" ></app-modal-challenges> -->
 </ng-container>
 
