--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -2,7 +2,7 @@
     <h2>Reto Mensual</h2>
     <div #CarouselChallenge class="cards-months__container">
         <ng-container *ngFor="let month of [0,1,2,3,4,5];let i=index">
-            <app-card-month-challenges (click)="openModal()" [ind]="i" [periodDetailData]="periodData.period_detail[0]"></app-card-month-challenges>
+            <app-card-month-challenges (click)="openModal()" [ind]="i" [periodDetailData]="periodData"></app-card-month-challenges>
         </ng-container>
     </div>
     <div class="point-carousel__container">
