--- a/src/app/shared/components/modal-challenge-likeu/modal-challenge-likeu.component.html
+++ b/src/app/shared/components/modal-challenge-likeu/modal-challenge-likeu.component.html
@@ -1,26 +1,26 @@
-<div class="modal-challenges__general-container">
-    <div class="modal-challenge__container">
-        <div class="modal-challenge__header__container">
+<div class="container">
+    <div class="modal-challenge">
+        <div class="modal-challenge__header">
             <h2 class="modal-challenge__header-title">Reto LikeU</h2>
             <h2 class="modal-challenge__header-subtitle">!Santander confía en ti¡</h2>
         </div>
     
-        <div class="modal-challenge__goals__container">
-            <figure class="modal-challenge__goals-goal">
-                <img class="modal-challenge__goals-goal-icon" src="" alt="">
+        <div class="modal-challenge__goals">
+            <figure class="modal-challenge__goal">
+                <img class="modal-challenge__goal-icon" src="" alt="">
             </figure>
-            <span class="modal-challenge__goals-goal-text">Lorem ipsum dolor sit amet.</span>
+            <span class="modal-challenge__goal-text">Lorem ipsum dolor sit amet.</span>
         </div>
     
-        <div class="modal-challenge__challenges__container">
+        <div class="modal-challenge__challenges">
             <h3>Tus objetivos</h3>
-            <div class="modal-challenge__challenge__container">
-                <figure class="modal-challenge__challenge__icon">
+            <div class="modal-challenge__challenge">
+                <figure class="modal-challenge__challenge-icon">
                     <img src="" alt="">
                 </figure>
-                <div class="modal-challenge__challenge__texts">
-                    <span class="modal-challenge__challenge__title"></span>
-                    <span class="modal-challenge__challenge__description"></span>
+                <div class="modal-challenge__challenge-texts">
+                    <span class="modal-challenge__challenge-title"></span>
+                    <span class="modal-challenge__challenge-description"></span>
                 </div>
             </div>
         </div>
