--- a/src/app/shared/components/card-month-challenges/card-month-challenges.component.html
+++ b/src/app/shared/components/card-month-challenges/card-month-challenges.component.html
@@ -1,11 +1,11 @@
-<div class="card__container">
+<div class="card">
     <h2 class="card__title">{{month}} {{ind}}</h2>
-    <div class="card-body__container">
+    <div class="card__body">
         <ng-container *ngFor="let challenge of [0,1,2];let i=index" >
-            <div class="challenge__container">
-                <span class="challenge-number">{{i+1}}</span>
-                <span class="challenge-title"></span>
-                <span class="challenge-icon"></span>
+            <div class="challenge">
+                <span class="challenge__number">{{i+1}}</span>
+                <span class="challenge__title"></span>
+                <span class="challenge__icon"></span>
             </div>
         </ng-container>
         <span class="card-footer">En proceso</span>
