--- a/src/app/shared/components/modal-challenge-likeu/modal-challenge-likeu.component.css
+++ b/src/app/shared/components/modal-challenge-likeu/modal-challenge-likeu.component.css
@@ -1,5 +1,5 @@
 
-.modal-challenges__general-container{
+.modal-container{
     align-items: center;
     background-color: rgba(0,0,0,.3);
     display: flex;
@@ -10,7 +10,7 @@
     width: 100%;
 }
 
-.modal-challenge__container{
+.modal-challenge{
     background-color: #fff;
     display: flex;
     flex-direction: column;
