--- a/src/app/shared/components/modal-challenges/modal-challenges.component.html
+++ b/src/app/shared/components/modal-challenges/modal-challenges.component.html
@@ -1,16 +1,16 @@
-<div class="modal-challenges__general-container">
-    <div class="modal-challenges__container">
+<div class="modal-container">
+    <div class="modal-challenges">
 
         <figure class="modal-challenges__header">
-            <img class="modal-challenges-header__icon" src="" alt="">
+            <img class="modal-challenges__icon" src="" alt="">
         </figure>
 
-        <div class="modal-challenges__body__container">
+        <div class="modal-challenges__body">
             <ng-container *ngFor="let challenge of [0,1,2]">
-                <div class="modal-challenges__body-challenge__container">
-                    <h3 class="modal-challenges__body-challenge__title">Lorem, ipsum dolor.</h3>
-                    <p class="modal-challenges__body-challenge__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, illo.</p>
-                    <a class="modal-challenges__body-challenge__link" href="">aqui>></a>
+                <div class="modal-challenges__body-challenge">
+                    <h3 class="modal-challenges__body-challenge-title">Lorem, ipsum dolor.</h3>
+                    <p class="modal-challenges__body-challenge-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, illo.</p>
+                    <a class="modal-challenges__body-challenge-link" href="">aqui>></a>
                 </div>
             </ng-container>
         </div>
