--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -1,13 +1,13 @@
-<div class="month-challenges__container">
+<div class="month-challenges">
     <h2>Reto Mensual</h2>
-    <div #CarouselChallenge class="cards-months__container">
-        <ng-container *ngFor="let month of [0,1,2,3,4,5];let i=index">
-            <app-card-month-challenges (click)="openModal()" [ind]="i" [periodDetailData]="periodData"></app-card-month-challenges>
+    <div #CarouselChallenge class="month-challenges__cards-months">
+        <ng-container *ngFor="let month of periodData;let i=index">
+            <app-card-month-challenges (click)="openModal()" [ind]="i" [periodDetailData]="month"></app-card-month-challenges>
         </ng-container>
     </div>
-    <div class="point-carousel__container">
+    <div class="month-challenges__points-carousel">
         <ng-container *ngFor="let point of [0,1,2,3,4,5];let i=index">
-            <span class="point-carousel" (click)="setCurrentPosition(i)"></span>
+            <span class="month-challenges__point-carousel" (click)="setCurrentPosition(i)"></span>
         </ng-container>
     </div>
 </div>
