--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,18 @@ body{
     margin: 0;
     box-sizing: border-box;
 }
+
+.modal-container{
+    align-items: center;
+    background-color: rgba(0,0,0,.3);
+    display: flex;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
 @media screen and (min-width: 320px) {
 
 }
