--- a/src/app/shared/components/card-month-challenges/card-month-challenges.component.html
+++ b/src/app/shared/components/card-month-challenges/card-month-challenges.component.html
@@ -8,41 +8,7 @@
                 <span class="challenge__icon"></span>
             </div>
         </ng-container>
-        <span class="card-footer">En proceso</span>
-        
-
-        <!-- <div [ngSwitch]="periodDetailData.status">
-            <div class="card-body__ongoing" *ngSwitchCase="'ONGOING'">
-                <ng-container *ngFor="let challenge of [0,1,2];let i=index" >
-                    <div class="challenge__container">
-                        <span class="challenge-number">{{i+1}}</span>
-                        <span class="challenge-title"></span>
-                        <span class="challenge-icon"></span>
-                    </div>
-                </ng-container>
-                <span class="card-footer">En proceso</span>
-            </div>
-
-            <div class="card-body__finish" *ngSwitchCase="'FINISH'">
-                <div class="challenge__container">
-                    <figure class="image-complete__container">
-                        <img class="">
-                    </figure>
-                    <span class="card-footer"> Cumplido</span>
-
-                </div>
-
-            </div>
-            <div class="card-body__no-iniciado" *ngSwitchDefault>
-                <div class="challenge__container">
-                    <figure class="image-complete__container">
-                        <img class="">
-                    </figure>
-                    <span class="card-footer"> No iniciado</span>
-
-                </div>
-            </div>
-        </div> -->
+        <span class="card__footer">En proceso</span>
         
 
     </div>
