--- a/src/app/shared/components/modal-challenge-likeu/modal-challenge-likeu.component.html
+++ b/src/app/shared/components/modal-challenge-likeu/modal-challenge-likeu.component.html
@@ -1,30 +1,30 @@
-<div class="container">
+<div class="modal-container">
     <div class="modal-challenge">
         <div class="modal-challenge__header">
-            <h2 class="modal-challenge__header-title">Reto LikeU</h2>
-            <h2 class="modal-challenge__header-subtitle">!Santander confía en ti¡</h2>
+            <h2 class="modal-challenge__title">Reto LikeU</h2>
+            <h2 class="modal-challenge__subtitle">!Santander confía en ti¡</h2>
         </div>
     
-        <div class="modal-challenge__goals">
-            <figure class="modal-challenge__goal">
-                <img class="modal-challenge__goal-icon" src="" alt="">
+        <div class="modal-goals">
+            <figure class="modal-goals__goal">
+                <img class="modal-goals__icon" src="" alt="">
             </figure>
-            <span class="modal-challenge__goal-text">Lorem ipsum dolor sit amet.</span>
+            <span class="modal-goals__text">Lorem ipsum dolor sit amet.</span>
         </div>
     
-        <div class="modal-challenge__challenges">
+        <div class="modal-challenges">
             <h3>Tus objetivos</h3>
-            <div class="modal-challenge__challenge">
-                <figure class="modal-challenge__challenge-icon">
+            <div class="modal-challenge">
+                <figure class="modal-challenge__icon">
                     <img src="" alt="">
                 </figure>
-                <div class="modal-challenge__challenge-texts">
-                    <span class="modal-challenge__challenge-title"></span>
-                    <span class="modal-challenge__challenge-description"></span>
+                <div class="modal-challenge__texts">
+                    <span class="modal-challenge__title"></span>
+                    <span class="modal-challenge__description"></span>
                 </div>
             </div>
         </div>
     
-        <button class="modal-challenge__button">Entendido</button>
+        <button class="button">Entendido</button>
     </div>
 </div>
