--- a/src/app/shared/components/card-data/card-data.component.html
+++ b/src/app/shared/components/card-data/card-data.component.html
@@ -1,14 +1,14 @@
 <div class="card-data">
-    <figure class="card-data__image">
-        <img class="card-data__image-img" src="" alt="">
+    <figure class="card-image">
+        <img class="card-image__img" src="" alt="">
     </figure>
-    <div class="card-data__details">
-        <span class="card-data__details-current-limit-title">Tu límite actual</span>
+    <div class="card-details">
+        <span class="card-details__current-limit-title">Tu límite actual</span>
         <ng-container *ngIf="cardData.current_limit">
-            <span class="card-data__details-current-limit"> <span class="card-data__details-current-limit-amount">{{cardData.current_limit?.amount | currency}}</span> <span class="card-data__details-current-limit-currency"> {{cardData.current_limit.currency_code}} </span> </span>
+            <span class="card-details__current-limit"> <span class="card-details__current-limit-amount">{{cardData.current_limit?.amount | currency}}</span> <span class="card-details__current-limit-currency"> {{cardData.current_limit.currency_code}} </span> </span>
 
         </ng-container>
-        <span class="card-data__details-type">{{cardData.type}}</span>
-        <span class="card-data__details-display-number">{{cardData.display_number}}</span>
+        <span class="card-details__type">{{cardData.type}}</span>
+        <span class="card-details__display-number">{{cardData.display_number}}</span>
     </div>
 </div>
