--- a/src/app/shared/components/card-data/card-data.component.css
+++ b/src/app/shared/components/card-data/card-data.component.css
@@ -2,8 +2,9 @@
     background-color: #fff;
     display: flex;
     justify-content: space-between;
+    margin: 0 1rem 0 1rem;
     padding: 1em;
-    width: 100%;
+    width: auto;
 }
 
 .card-image{
@@ -17,6 +18,7 @@
 }
 
 .card-details{
+    justify-content: center;
     display: flex;
     flex-direction: column;
     min-width: 55%;
@@ -31,11 +33,13 @@
 }
 
 .card-details__current-limit-title{
+    font-size: .75rem;
     font-weight: 600;
 }
 
 .card-details__current-limit
 {
+    font-size: 1.5rem;
     font-weight: 700;
 }
 
@@ -46,4 +50,86 @@
 
 .card-details__type{
     font-size: .75em;
+}
+
+.card-data__percent{
+    position: relative;
+    padding: 0 4px;
+}
+
+.percent{
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.percent__circle{
+
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    position: absolute;
+
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+}
+
+.percent__background{
+
+    position: absolute;
+    width: 56px;
+    top: 0;
+}
+
+.percent__description{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    justify-content: center ;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    
+}
+.percent__text{
+    font-weight: 600;
+}
+.percent__potential-limit{
+    color: var(----theme-color-text-03);
+    font-size: .6rem;
+}
+
+
+@media (min-width: 360px) and (max-width: 414px){
+    .percent__background {
+        width: 64px;
+    }
+    .percent__circle{
+
+        width: 64px;
+        height: 64px;
+    }
+
+}
+@media screen and (min-width: 415px){
+    .percent__background {
+        width: 72px;
+    }
+    
+    .percent__circle{
+        width: 72px;
+        height: 72px;
+    }
+
 }
