--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root{
+    ----theme-color-text-03:#999999FF;
+    --theme-color-background-default:#F2F2F2FF;
     --primaryTextColor:#000;
     --SecondaryTextColor:#888;
     --primaryColor:red;
@@ -28,8 +30,16 @@ body{
     width: 100%;
 }
 
-@media screen and (min-width: 320px) {
+.sn-icon-button{
+    min-height: auto!important;
+}
 
+@media screen and (min-width: 320px) {
+    .percent__circle{
+
+        width: 64px;
+        height: 64px;
+    }
 }
   
 @media screen and (min-width: 360px) {
@@ -40,6 +50,12 @@ body{
 
 @media screen and (min-width: 375px) {
 
+}
+@media screen and (min-width: 415px) {
+    .circle_svg{
+        height: 72px;
+        width: 72px;
+    }
 }
 
 @media screen and (min-width: 512px) {
