--- a/src/app/shared/components/card-general-advance/card-general-advance.component.css
+++ b/src/app/shared/components/card-general-advance/card-general-advance.component.css
@@ -1,60 +1,11 @@
 .card-general{
     background-color: #fff;
-    padding: 1em;
+    padding: 1rem 1.5rem;
     width: 100%;
 }
 
-.card-general__limit-increase{
-    display: grid;
-    gap:.5em;
-    grid-template-columns: repeat(2,1fr);
-
+h2{
+    font-size: 1rem;
+    margin-bottom: 2rem;
 }
 
-.potential-limit,
-.next-increase
-{
-    display: grid;
-    gap: .5em;
-    grid-template-columns: repeat(2,1fr);
-}
-
-.potential-limit__texts,
-.next-increase__texts{
-    display: flex;
-    flex-direction: column;
-}
-
-.potential-limit__limit,
-.next-increase__limit{
-    margin-top: .5em;
-}
-
-.months-challenges{
-    display: grid;
-    font-size: .60em;
-    gap: 1em;
-    grid-template-columns: repeat(6,1fr);
-    min-width: 54px;
-}
-
-.month-challenge__mark{
-    border:1px solid var(--SecondaryTextColor);
-    border-radius: 2px;
-    margin: auto;
-    margin-bottom: .5em;
-    min-width: 30px;
-    height: 1em;
-    width:70%;
-
-}
-
-.month-challenge__text{
-    display: block;
-    margin-bottom: .5em;
-    text-align: center;
-}
-
-.month-challenges__text-superindice{
-    margin-bottom: .5em;
-}
