--- a/src/app/shared/components/card-general-advance/card-general-advance.component.html
+++ b/src/app/shared/components/card-general-advance/card-general-advance.component.html
@@ -1,20 +1,9 @@
 <div class="card-general">
 
     <div class="advance">
-        <h2>Tú avance</h2>
+        <h2>Retos mensuales</h2>
         <div class="months-challenges">
-            <div class="month-challenge"  *ngFor="let period of [0,1,2,3,4,5]; let i = index">
-                <div class="month-challenge__mark">
-                    
-                </div>
-                <span class="month-challenges__text"> Mes {{i+1}}</span>
-                <div [ngSwitch]="i">
-                    <span *ngSwitchCase="2">1<span class="month-challenges__text-superindice">er</span> incremento <span class="month-challenges__text-percent"> 50% </span> </span>
-                    <span *ngSwitchCase="3">2<span class="month-challenges__text-superindice">do</span> incremento <span class="month-challenges__text-percent"> 70% </span> </span>
-                    <span *ngSwitchCase="4">3<span class="month-challenges__text-superindice">er</span> incremento <span class="month-challenges__text-percent"> 90% </span> </span>
-                    <span *ngSwitchCase="5">4<span class="month-challenges__text-superindice">to</span> incremento <span class="month-challenges__text-percent"> 100% </span> </span>
-                </div>
-            </div>
+            <sn-timeline></sn-timeline>
         </div>
     </div>
 
