--- a/src/app/shared/components/card-data/card-data.component.css
+++ b/src/app/shared/components/card-data/card-data.component.css
@@ -106,7 +106,7 @@
     font-weight: 600;
 }
 .percent__potential-limit{
-    color: var(----theme-color-text-03);
+    color: var(--);
     font-size: .6rem;
 }
 
