--- a/src/app/shared/components/month-challenges/month-challenges.component.css
+++ b/src/app/shared/components/month-challenges/month-challenges.component.css
@@ -1,29 +1,14 @@
-.month-challenges__cards-months{
+.month-challenges{
+    background-color: #fff;
     display: grid;
     gap:1em;
-    grid-template-columns: repeat(6,40%);
     overflow: auto
 }
 
-.month-challenges__cards-months::-webkit-scrollbar{
-    display: none;
+.month-challenges__title{
+    font-size: 1.25rem;
+    padding: 1rem;
 }
 
-.month-challenges__points-carousel{
-    display: grid;
-    gap: .5em;
-    grid-auto-flow: column;
-    margin:auto;
-    margin-top: 1em;
-    width: fit-content;
-}
-
-.month-challenges__.point-carousel{
-    background-color: #333;
-    border-radius: 50%;
-    cursor: pointer;
-    height: .5em;
-    width: .5em;
-}
 
 
