--- a/src/app/shared/molecules/timeline/timeline.component.css
+++ b/src/app/shared/molecules/timeline/timeline.component.css
@@ -18,7 +18,7 @@
 
 .time-line__points::before{
     content: '';
-    background: var(----theme-color-text-03);
+    background: var(--theme-color-ui-04);
     display: flex;
     height: .1rem;
     left: 1rem;
@@ -44,7 +44,7 @@
 
 .point__next{
     background-color: #fff;
-    border: .1rem solid var(----theme-color-text-03);
+    border: .1rem solid var(--theme-color-ui-04);
     border-radius: 50%;
     height: .75rem;
     width: .75rem;
