--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root{
-    ----theme-color-text-03:#999999FF;
+    --theme-color-primary-05:#000000ff;
+    --theme-color-background-default:#F2F2F2FF;
+    --theme-color-text-02:#595959FF;
+    --theme-color-text-03:#999999FF;
     --theme-color-primary-01:#EC0000FF;
     --theme-color-background-default:#F2F2F2FF;
-    --primaryTextColor:#000;
-    --SecondaryTextColor:#888;
-    --primaryColor:red;
+    --theme-color-ui-04:#D9D9D9FF;
 }
 
 body{
@@ -33,6 +34,12 @@ body{
 
 .sn-icon-button{
     min-height: auto!important;
+}
+
+sn-icon>i[class^=sn-]{
+    display: flex;
+    align-items: center;
+    color: var(--theme-color-primary-01);
 }
 
 @media screen and (min-width: 320px) {
