--- a/src/app/shared/components/card-data/card-data.component.css
+++ b/src/app/shared/components/card-data/card-data.component.css
@@ -1,5 +1,7 @@
 .card-data{
     background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0px 10px 12px rgba(0, 0, 0, 0.12);
     display: flex;
     justify-content: space-between;
     margin: 0 1rem 0 1rem;
@@ -65,22 +67,15 @@
 
 .percent__circle{
 
-    width: 56px;
-    height: 56px;
+    align-items: center;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
+    height: 56px;
     justify-content: center;
-    align-items: center;
     margin: auto;
     position: absolute;
-
-    border-radius: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
+    width: 56px;
 }
 
 .percent__background{
