Se realizan ajustes al timeline

--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -1,6 +1,10 @@
 <div class="month-challenges">
     <h2 class="month-challenges__title">Retos a conseguir</h2>
     <sn-element-list></sn-element-list>
+    <sn-element-list></sn-element-list>
+    <sn-element-list></sn-element-list>
+    <sn-element-list></sn-element-list>
+    <sn-element-list></sn-element-list>
 </div>
 
 
