--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
 body{
     background-color: #ccc;
     margin:auto;
-    width: 100%;
+    width: 375px;
     font-size: 12px;
 }
 *{
@@ -72,9 +72,6 @@ sn-icon>i[class^=sn-]{
 }
 
 @media screen and (min-width: 768px) {
-    body{
-        width: 70%;
-        margin:auto
-    }
+
 }
 
