--- a/src/app/shared/molecules/circle-progress/circle-progress.component.html
+++ b/src/app/shared/molecules/circle-progress/circle-progress.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="progress__circle  " >
             <svg viewBox="0, 0, 100, 100">
-                <circle stroke-width="5" fill="transparent" ="var(--theme-color-primary-01)" r="47" cx="50" cy="50" [ngStyle]="{'stroke-dasharray': circunference, 'stroke-dashoffset': strokeDashoffset}"></circle>
+                <circle stroke-width="5" fill="transparent" stroke="var(--theme-color-primary-01)" r="47" cx="50" cy="50" [ngStyle]="{'stroke-dasharray': circunference, 'stroke-dashoffset': strokeDashoffset}"></circle>
             </svg>
         </div>
     </div>
